--- a/package.json
+++ b/package.json
@@ -9,23 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.2.1",
+    "@expo/cli": "^0.18.30",
+    "@expo/metro-runtime": "~3.2.3",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/elements": "^1.3.31",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.10.1",
     "@react-navigation/stack": "^6.4.1",
     "color": "^4.2.3",
-    "expo": "~51.0.22",
-    "expo-dev-client": "~4.0.20",
+    "expo": "^51.0.38",
+    "expo-dev-client": "~4.0.28",
     "expo-file-system": "~17.0.1",
     "expo-linking": "~6.3.1",
+    "expo-random": "~14.0.1",
     "expo-sharing": "~12.0.1",
+    "expo-standard-web-crypto": "^1.8.1",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.3",
+    "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-localize": "^3.2.0",
     "react-native-paper": "^5.12.3",
